<?xml version="1.0" encoding="utf-8"?>
<!--
Title:       Mobile Coursework
Student:     Ryan Ballantine
Student ID:  S1829049
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_incidents"
            android:icon="@drawable/ic_incidents"
            android:title="@string/menu_incidents" />
        <item
            android:id="@+id/nav_roadworks"
            android:icon="@drawable/ic_roadworks"
            android:title="@string/menu_roadworks" />
        <item
            android:id="@+id/nav_plannedroadworks"
            android:icon="@drawable/ic_plannedroadworks"
            android:title="@string/menu_plannedroadworks" />
    </group>
</menu>
