<?xml version="1.0" encoding="utf-8"?>
<!--
Title:       Mobile Coursework
Student:     Ryan Ballantine
Student ID:  S1829049
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rballa201.coursework.mobilecoursework.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.rballa201.coursework.mobilecoursework.fragments.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_roadworks"
        android:name="com.rballa201.coursework.mobilecoursework.fragments.roadworks.RoadworksFragment"
        android:label="@string/menu_roadworks"
        tools:layout="@layout/fragment_roadworks" />

    <fragment
        android:id="@+id/nav_plannedroadworks"
        android:name="com.rballa201.coursework.mobilecoursework.fragments.plannedroadworks.PlannedRoadworksFragment"
        android:label="@string/menu_plannedroadworks"
        tools:layout="@layout/fragment_plannedroadworks" />

    <fragment
        android:id="@+id/nav_incidents"
        android:name="com.rballa201.coursework.mobilecoursework.fragments.incidents.IncidentsFragment"
        android:label="@string/menu_incidents"
        tools:layout="@layout/fragment_incidents"/>
</navigation>